# Django

oz-backend-django3/: db.sqlite3  pyproject.toml
oz-backend-django3/boards/: admin.py  models.py
oz-backend-django3/boards/migrations/: 0001_initial.py  0002_board_user.py
oz-backend-django3/common/: models.py
oz-backend-django3/config/: authentication.py  settings.py  urls.py
oz-backend-django3/feeds/: admin.py  models.py  serializers.py  tests.py  views.py
oz-backend-django3/feeds/migrations/: 0001_initial.py
oz-backend-django3/reviews/: models.py  serializers.py  tests.py  urls.py  views.py
oz-backend-django3/reviews/migrations/: 0001_initial.py  0002_review_created_at_review_updated_at.py
oz-backend-django3/users/: admin.py  serializers.py  urls.py  views.py
oz-backend-django3/users/migrations/: 0001_initial.py
